@@ -1,3 +1,7 @@
+2010-07-19  Andreia Gaita  <avidigal@novell.com>
+
+	* plugin-accessibility-bridge.cpp: add missing config.h includes
+
 2010-07-15  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* README: Bump to r160387
